--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,8 +5,15 @@
     height: 130px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     background-color: rgb(7, 8, 10);
     padding: 16px;
+}
+
+.name{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footerContainer .copyRight{
@@ -16,9 +23,18 @@
     margin-top: 8px;
 }
 
+.footerContainer .pData{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .footerContainer .whatsApp{
     display: flex;
     justify-content: center;
+    align-items: center;
+    width: 70%;
     align-items: center;
     letter-spacing: 2px;
 }
@@ -50,12 +66,15 @@
 }
 
 .footerContainer .handHelp{
-    width: 100%;
+    width: 20%;
     height: 150px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
 }
 
 .footerContainer .hand{
     color: white;
+    width: 100px;
+    height: 100px;
 }
