--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -74,3 +74,69 @@ ul {
     border-radius:8px;
     /* align-items: center; */
 }
+
+
+
+@media screen and (max-width:800px) {
+    .header{
+        width: 100%;
+        height: 70px;
+        display: flex;
+        justify-content:space-evenly;
+        align-items: flex-start;
+        background: linear-gradient(to right, rgba(221, 225, 248, 0.8), rgba(33, 150, 243, 0.8));
+    }
+    
+    .logo{
+        width:300px;
+        height: 70px;
+
+    }
+    .menu{
+        width: 100%;
+        height: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content:space-evenly;
+        align-items: center;
+        font-family: 'Josefin Sans', sans-serif;
+        font-size: 15px;
+        color: rgb(99, 97, 97);
+        gap:5px;
+        margin-top: 10px;
+    }
+
+}
+
+
+
+@media screen and (max-width:470px) {
+    .header{
+        width: 40%;
+        height: 35px;
+        display: flex;
+        justify-content:space-evenly;
+        align-items: flex-start;
+        background: linear-gradient(to right, rgba(221, 225, 248, 0.8), rgba(33, 150, 243, 0.8));
+    }
+    
+    .logo{
+        width:150px;
+        height: 35px;
+
+    }
+    .menu{
+        width: 100%;
+        height: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content:space-evenly;
+        align-items: center;
+        font-family: 'Josefin Sans', sans-serif;
+        font-size: 8px;
+        color: rgb(99, 97, 97);
+        gap:5px;
+        margin-top: 10px;
+    }
+
+}
