--- a/src/components/casaSoacha/casaSoacha.css
+++ b/src/components/casaSoacha/casaSoacha.css
@@ -40,3 +40,44 @@ p{
     flex-direction: column;
     align-items: center;
 }
+
+
+
+
+@media screen and (max-width:800px) {
+    
+    .container{
+        width: 450px;
+        background-color: rgb(183, 218, 238);
+        padding: 6px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        margin-top: 12px;
+
+    }
+
+    h1{
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 19px;
+        display: flex;
+        justify-content: center;
+        color: red;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+
+        
+    .description{
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-weight: 300;
+        font-size: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+}
