--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -71,43 +71,107 @@
     width: 100%;
 }
 
-.publicidad{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 60%;
-    font-family: 'Croissant One', serif;
-    font-family: 'Josefin Sans', sans-serif; 
-    font-weight: bold; 
-    color: rgba(0, 0, 0, 0.856);
-    font-size: 18px;
+    .publicidad{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 60%;
+        font-family: 'Croissant One', serif;
+        font-family: 'Josefin Sans', sans-serif; 
+        font-weight: bold; 
+        color: rgba(0, 0, 0, 0.856);
+        font-size: 18px;
+    }
+
+    .card{
+        margin: 0;
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .autoHand{
+        height: 120px;
+        margin-right: 20px;
+    }
+
+    .publicidad{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        font-family: 'Croissant One', serif;
+        font-family: 'Josefin Sans', sans-serif; 
+        font-weight: bold; 
+        color: rgba(0, 0, 0, 0.856);
+        font-size: 12px;
+    }
+
 }
 
-.card{
-    margin: 0;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.autoHand{
-    height: 120px;
-    margin-right: 20px;
-}
-
-.publicidad{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    font-family: 'Croissant One', serif;
-    font-family: 'Josefin Sans', sans-serif; 
-    font-weight: bold; 
-    color: rgba(0, 0, 0, 0.856);
-    font-size: 12px;
-}
 
 
-}
+@media only screen and (max-width:500px){
+    
+    .containerBan{
+        width: 100%;
+        margin:8px ;
+        display: flex;
+        height: 100px;
+        background-image: linear-gradient(to right, #89abeb, #f0f6f9);
+    
+    }
+    
+    .containerBan h3{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Croissant One', serif;
+        font-family: 'Josefin Sans', sans-serif;    
+        font-size: 12px;
+        color: rgba(0, 0, 0, 0.856);;
+        width: 100%;
+    }
+    
+        .publicidad{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            font-family: 'Croissant One', serif;
+            font-family: 'Josefin Sans', sans-serif; 
+            font-weight: bold; 
+            color: rgba(0, 0, 0, 0.856);
+            font-size: 12px;
+        }
+    
+        .card{
+            margin: 0;
+            width: 100%;
+            display: flex;
+            justify-content: flex-end;
+        }
+    
+        .autoHand{
+            height: 90px;
+            margin-right: 10px;
+        }
+    
+        .publicidad{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            font-family: 'Croissant One', serif;
+            font-family: 'Josefin Sans', sans-serif; 
+            font-weight: bold; 
+            color: rgba(0, 0, 0, 0.856);
+            font-size: 8px;
+        }
+    
+    }
+    
