--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -110,19 +110,23 @@ ul {
 
 
 
-@media screen and (max-width:470px) {
+@media screen and (max-width:500px) {
     .header{
-        width: 40%;
-        height: 35px;
+        width: 100%;
+        height: 45px;
         display: flex;
-        justify-content:space-evenly;
-        align-items: flex-start;
+        justify-content:center;
+        align-items: center;
         background: linear-gradient(to right, rgba(221, 225, 248, 0.8), rgba(33, 150, 243, 0.8));
     }
     
     .logo{
-        width:150px;
-        height: 35px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width:140px;
+        height:40px;
 
     }
     .menu{
@@ -133,7 +137,7 @@ ul {
         justify-content:space-evenly;
         align-items: center;
         font-family: 'Josefin Sans', sans-serif;
-        font-size: 8px;
+        font-size: 6px;
         color: rgb(99, 97, 97);
         gap:5px;
         margin-top: 10px;
