--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -25,3 +25,19 @@
     }
 
 }
+
+
+@media only screen and (max-width:560px){
+
+    .slider{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin:auto;
+        margin-top: 16px;
+        margin-bottom: 24px;
+         
+    }
+
+}
