--- a/src/components/casaSoacha/casaSoacha.css
+++ b/src/components/casaSoacha/casaSoacha.css
@@ -79,5 +79,43 @@ p{
         align-items: center;
     }
 
+}
+
+
+
+@media screen and (max-width:500px) {
+    
+    .container{
+        width: 100%;
+        background-color: rgb(183, 218, 238);
+        padding: 6px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        margin-top: 8px;
+
+    }
+
+    h1{
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-size: 14px;
+        display: flex;
+        justify-content: center;
+        color: red;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+
+        
+    .description{
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-weight: 300;
+        font-size: 12px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
 }
